# MathCAT

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: CODEOWNERS
PythonScripts/: frequent-ops-set.txt  pyproject.toml  split-unicode-files.py
PythonScripts/audit_translations/: README.md  __init__.py  auditor.py  cli.py  dataclasses.py  differ.py  extractors.py  line_resolver.py  models.py  parsers.py  renderer.py
PythonScripts/audit_translations/tests/: conftest.py  test_auditor.py  test_cli_end_to_end.py  test_differ.py  test_extractors.py  test_line_resolver.py  test_output_jsonl.py  test_output_objects.py  test_parsers.py
PythonScripts/audit_translations/tests/fixtures/repro/: README.md
PythonScripts/audit_translations/tests/fixtures/repro/en/: per_fraction.yaml
PythonScripts/audit_translations/tests/fixtures/repro/nb/: per_fraction.yaml
PythonScripts/audit_translations/tests/golden/jsonl/: de.json
PythonScripts/audit_translations/tests/golden/rich/: cli_calculus_verbose.golden  structure_diff_nonverbose.golden  structure_diff_verbose.golden
docs/: Anvandarguide_till_MathCAT_sv.md  Gemfile  README.md  User_guide_for_MathCAT_en.md  _config.yml  callers.md  helpers.md  index.md  nav-commands.md  new_translators_guide_MathCAT_revised.md  nvda.mo  users.md
fuzz/: Cargo.toml  mathml.dict
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: braille.rs  canonicalize.rs  chemistry.rs  definitions.rs  infer_intent.rs  interface.rs  lib.rs  main.rs  navigate.rs  prefs.rs  pretty_print.rs  shim_filesystem.rs  speech.rs  tts.rs  xpath_functions.rs
tests/: braille.rs  languages.rs  (+1 more)
(+331 files in other folders)
