[project]
name = "pythonscripts"
version = "0.1.0"
description = "Utility scripts for MathCAT, including tracking of localization progress in Rules-files."
authors = [
    { name = "Neil Soiffer" }, # MathCAT main author
    { name = "Moritz Groß" } # author of tool "audit-translations"
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs",
    "beautifulsoup4",
    "deepl",
    "googletrans",
    "html-table-extractor",
    "jsonpath-ng>=1.8.0",
    "pyyaml",
    "rich",
    "ruamel.yaml",
]

[project.scripts]
audit-translations = "audit_translations.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.4",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "audit_translations"
module-root = ""

[tool.ruff]
target-version = "py314"
line-length = 130 # easier for some files. maybe decrease in the future

[tool.ruff.format]
docstring-code-format = true
